# ringcentral_to_erpnext

./: CRM_TELEPHONY.md  MANIFEST.in  README.md  apps.txt  pyproject.toml  setup.py
crm_patches/: 0001-ringcentral-telephony-support.patch  README.md  apply-overlay.ps1  apply-overlay.sh
crm_patches/frontend/src/components/Settings/Telephony/: RingCentralSettings.vue  TelephonyPage.vue  TelephonySettings.vue
crm_patches/frontend/src/components/Telephony/: CallUI.vue  RingCentralCallUI.vue
ringcentral_to_erpnext/: hooks.py  install.py  patches.txt
ringcentral_to_erpnext/api/: ringcentral.py
ringcentral_to_erpnext/integrations/: crm.py
ringcentral_to_erpnext/patches/v1_0/: create_module_def.py
ringcentral_to_erpnext/public/js/: rc_widget.js
ringcentral_to_erpnext/ringcentral_to_erpnext/: module.txt
ringcentral_to_erpnext/ringcentral_to_erpnext/doctype/ringcentral_agent/: ringcentral_agent.json  ringcentral_agent.py
ringcentral_to_erpnext/ringcentral_to_erpnext/doctype/ringcentral_settings/: ringcentral_settings.js  ringcentral_settings.json  ringcentral_settings.py
ringcentral_to_erpnext/www/: rc_webhook.py
