[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ringcentral_to_erpnext"
version = "1.0.0"
description = "RingCentral telephony integration for Frappe CRM / ERPNext"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
]

[tool.frappe]
frappe_version = ">=15.0.0"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
crm    = ">=1.0.0"
